fix for row chart text total complaints NNNN cut off on print view

--- a/src/print.less
+++ b/src/print.less
@@ -37,8 +37,7 @@
   }
 
   .advanced-container,
-  .search-panel,
-  .row-chart {
+  .search-panel {
     width: 100%;
   }
 
